# eqx-llama

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
eqx_llama/: __init__.py  kv_cache.py  kv_store.py  llama.py  llama_attention.py  llama_config.py  llama_feed_forward.py  llama_head.py  llama_layer.py  llama_legacy_attention.py  normalization.py  utils.py
eqx_llama/internals/: __init__.py  attention_regular.py  mha_pallas.py
notebooks/: example.ipynb
tests/: conftest.py  test_attention.py  test_kv_cache.py  test_model_details.py  test_training_sinusoid.py
