[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eqx_llama*"]
namespaces = false

[project]
name = "eqx-llama"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "LLaMA implementation with Jax and Equinox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.11.10",
    "jax[cuda12]>=0.5.3",
    "jaxtyping>=0.2.36",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = ["optax>=0.2.4", "pytest>=8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
