[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eqx-llama"
version = "0.0.1"
authors = [{ name = "Pierre-Louis Nordmann" }]
description = "LLaMA implementation with Jax and Equinox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.89",
    "equinox>=0.12.1",
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "pytest>=8.3.5",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["F722"]
